# anixrun

./: Cargo.toml  README.md  default.nix  flake.nix  shell.nix
src/: lib.rs  search.rs
