[package]
name = "anixrun"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"] # Required to build a dynamic library that can be loaded by anyrun

[dependencies]
anyrun-plugin = { git = "https://github.com/Kirottu/anyrun" }
abi_stable = "0.11.1"
serde = { version = "1.0.210", features = ["derive"] }
ron = "0.8.1"
serde_json = "1.0.128"
nix-index = "0.1.7"
regex = "1.10.6"
